# gomoku-game

./: BUILD_TEST_SUMMARY.md  CLAUDE.md  LOCAL_BUILD_TEST.md  README.md  RELEASE.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: 2025-12-01-caveat-the-messages-below-were-generated-by-the-u.txt  architecture.md  gomoku_rules.md  tasks.md  tasks_enhance.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: engine.rs  evaluator.rs  minimax.rs  mod.rs  pattern.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/game/: board.rs  mod.rs  rules.rs  types.rs
src-tauri/src/storage/: database.rs  models.rs
src/components/: GameModeSelector.tsx
src/components/Board/: Board.tsx  Cell.tsx
src/components/Game/: GameControls.tsx  GameLoadDialog.tsx  GameSaveDialog.tsx  GameStatus.tsx  MoveHistory.tsx
src/components/ui/: Toast.tsx  button.tsx  radio-group.tsx
src/stores/: gameStore.ts
src/types/: game.ts
src/utils/: tauri.ts
