[package]
name = "gomoku-game"
version = "0.1.0"
description = "五子棋游戏"
authors = ["you"]
edition = "2021"

[lib]
name = "gomoku_game_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
